<?xml version="1.0" encoding="utf-8"?>
<!--
<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logo_color"
    android:layout_marginBottom="80dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/blue_profile_border"
            android:orientation="vertical"
            android:padding="1dp"
            android:layout_marginBottom="50dp">

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/blue_profile_bkg"
                android:src="@drawable/default_pdp"
                android:contentDescription="@string/img_content_desc" />

            <TextView
                android:id="@+id/profiletitleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/name"
                android:textColor="@color/blue_dark"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/profileImg"
                app:layout_constraintStart_toStartOf="@id/profileImg"
                app:layout_constraintTop_toBottomOf="@id/profileImg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/profile_border"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:padding="15dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/profilePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/profile_border"
                app:drawableStartCompat="@drawable/baseline_phone_24"                    android:drawablePadding="10dp"
                android:hint="@string/phoneNumber"
                android:textSize="18sp"
                android:padding="15dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/profile_border"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:padding="15dp">

                <TextView
                    android:id="@+id/aboutme"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/about_me"
                    android:textColor="@color/blue_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="gravity"
                    android:hint="@string/summary"
                    android:textSize="17sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/profile_border"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:padding="15dp">

                <TextView
                    android:id="@+id/jobExperience"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/experience"
                    android:textColor="@color/blue_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/descJobExperience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="gravity"
                    android:hint="@string/job_exp_desc"
                    android:textSize="17sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/profile_border"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:padding="15dp">

                <TextView
                    android:id="@+id/education"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/education"
                    android:textColor="@color/blue_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/descEducation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="gravity"
                    android:hint="@string/education_desc"
                    android:textSize="17sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/profile_border"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:padding="15dp">

                <TextView
                    android:id="@+id/projectsRewards"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/projects_and_rewards"
                    android:textColor="@color/blue_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/projectsRewardsDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="gravity"
                    android:hint="@string/proj_and_rew_desc"
                    android:textSize="17sp"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profilebkg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_border"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_border"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_border"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email_maj"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_border"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/uploadPPButton"
                android:background="@drawable/blue_border"
                android:backgroundTint="@color/blue_light"
                android:textColor="@color/blue_dark"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:text="upload profile picture"
                android:textStyle="bold"
                android:textSize="11sp"/>
            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/cv1" />


            <Button
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:id="@+id/uploadResumeButton"
                android:text="Upload file"
                android:layout_marginTop="15dp"
                android:background="@drawable/blue_border"
                android:backgroundTint="@color/blue_light"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textColor="@color/blue_dark"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="220dp"
                android:text="Save"
                android:id="@+id/saveButton"
                android:textSize="15sp"
                android:background="@drawable/blue_border"
                android:backgroundTint="@color/blue_dark"
                android:textStyle="bold"
                android:textColor="@color/white"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>